# fdupa-lab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  lab1.md  lab2.md  lab3.md  readme.md
lib/: CMakeLists.txt
lib/IR/: IR.cpp  IR.h  IRBuilder.cpp  IRBuilder.h
lib/analysis/: dataflowAnalysis.h  interAnalysis.cpp  interAnalysis.h  intervalAnalysis.cpp  intervalAnalysis.h  modelChecker.cpp  modelChecker.h  relationalNumericalAnalysis.cpp  relationalNumericalAnalysis.h  zoneDomain.cpp  zoneDomain.h
lib/fdlang/: AST.cpp  AST.h  ASTTraversePrinter.cpp  ASTTraversePrinter.h  ASTVisitor.cpp  ASTVisitor.h  errorHandler.cpp  errorHandler.h  (+8 more)
test/: CMakeLists.txt  interAnalysisTest.cpp  intervalAnalysisTest.cpp  tokenizeTest.cpp  zoneAnalysisTest.cpp
testcases/: branch1.fdlang  branch1.fdlang.expected  branch2.fdlang  branch2.fdlang.expected  call1.fdlang  call1.fdlang.expected  call2.fdlang  call2.fdlang.expected  call3.fdlang  call3.fdlang.expected  call4.fdlang  call4.fdlang.expected  corner.fdlang  corner.fdlang.expected  deadcode1.fdlang  deadcode1.fdlang.expected  deadcode2.fdlang  deadcode2.fdlang.expected  loop1.fdlang  loop1.fdlang.expected  loop2.fdlang  loop2.fdlang.expected  loop3.fdlang  loop3.fdlang.expected  loop4.fdlang  loop4.fdlang.expected  loop5.fdlang  loop5.fdlang.expected  nobranch1.fdlang  nobranch1.fdlang.expected  nobranch2.fdlang  nobranch2.fdlang.expected  nobranch3.fdlang  nobranch3.fdlang.expected  rel1.fdlang  rel1.fdlang.expected  rel2.fdlang  rel2.fdlang.expected  rel3.fdlang  rel3.fdlang.expected  (+2 more)
tools/: CMakeLists.txt  fdlang.cpp
